@@ -208,7 +208,7 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,132,76,10
 END
 
-IDD_PROPBUMPER_VISUALS DIALOGEX 0, 0, 125, 174
+IDD_PROPBUMPER_VISUALS DIALOGEX 0, 0, 125, 189
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -232,6 +232,8 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,152,76,10
     LTEXT           "Ring Material",IDC_STATIC,7,69,42,8
     COMBOBOX        IDC_MATERIAL_COMBO4,7,77,111,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Ring Visible",IDC_RING_VISIBLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,174,51,10
+    CONTROL         "Skirt Visible",IDC_SKIRT_VISIBLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,174,51,10
 END
 
 IDD_CODEVIEW DIALOGEX 0, 0, 419, 215
@@ -2146,6 +2148,7 @@ BEGIN
 
     IDD_PROPBUMPER_VISUALS, DIALOG
     BEGIN
+        BOTTOMMARGIN, 174
     END
 
     IDD_CODEVIEW, DIALOG
